// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should have spacing at size "lg" 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: calc(-1 * calc(1.5 * var(--lendi-ui-size)));
}

.c0 .c1,
.c0 .sc-bZQynM {
  margin-top: calc(1.5 * var(--lendi-ui-size));
  margin-right: calc(1.5 * var(--lendi-ui-size));
}

<styled.div
  size="lg"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-dnqmqq",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  display: inline-flex;
  flex-wrap: wrap;
  ",
            [Function],
            ";
  ",
            [Function],
            "
  ",
            ".c1",
            ", ",
            ".sc-bZQynM",
            " {
    ",
            [Function],
            ";
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-dnqmqq",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    size="lg"
  >
    <div
      className="c0"
      size="lg"
    />
  </StyledComponent>
</styled.div>
`;

exports[`Wrapper should have spacing at size "md" 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: calc(-1 * var(--lendi-ui-size));
}

.c0 .c1,
.c0 .sc-bZQynM {
  margin-top: var(--lendi-ui-size);
  margin-right: var(--lendi-ui-size);
}

<styled.div
  size="md"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-dnqmqq",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  display: inline-flex;
  flex-wrap: wrap;
  ",
            [Function],
            ";
  ",
            [Function],
            "
  ",
            ".c1",
            ", ",
            ".sc-bZQynM",
            " {
    ",
            [Function],
            ";
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-dnqmqq",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    size="md"
  >
    <div
      className="c0"
      size="md"
    />
  </StyledComponent>
</styled.div>
`;

exports[`Wrapper should have spacing at size "sm" 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: calc(-1 * calc(0.75 * var(--lendi-ui-size)));
}

.c0 .c1,
.c0 .sc-bZQynM {
  margin-top: calc(0.75 * var(--lendi-ui-size));
  margin-right: calc(0.75 * var(--lendi-ui-size));
}

<styled.div
  size="sm"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-dnqmqq",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  display: inline-flex;
  flex-wrap: wrap;
  ",
            [Function],
            ";
  ",
            [Function],
            "
  ",
            ".c1",
            ", ",
            ".sc-bZQynM",
            " {
    ",
            [Function],
            ";
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-dnqmqq",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    size="sm"
  >
    <div
      className="c0"
      size="sm"
    />
  </StyledComponent>
</styled.div>
`;

exports[`Wrapper should have spacing at size "xs" 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: calc(-1 * calc(0.5 * var(--lendi-ui-size)));
}

.c0 .c1,
.c0 .sc-bZQynM {
  margin-top: calc(0.5 * var(--lendi-ui-size));
  margin-right: calc(0.5 * var(--lendi-ui-size));
}

<styled.div
  size="xs"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-dnqmqq",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  letter-spacing: normal;
",
            ";
  display: inline-flex;
  flex-wrap: wrap;
  ",
            [Function],
            ";
  ",
            [Function],
            "
  ",
            ".c1",
            ", ",
            ".sc-bZQynM",
            " {
    ",
            [Function],
            ";
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-dnqmqq",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    size="xs"
  >
    <div
      className="c0"
      size="xs"
    />
  </StyledComponent>
</styled.div>
`;
